--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: https://ogp.me/ns#">
+    <meta charset="UTF-8">
     %sveltekit.head%
   </head>
   <body itemscope itemtype="https://schema.org/WebPage" data-sveltekit-prefetch>
